# diplomady

./: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: build_and_deploy.yaml
deploy/: .env  docker-compose.yaml  nginx.conf
tests/: conftest.py  factories.py
tests/boards/: test_board_create_view.py  test_board_view.py  test_goal_create_view.py  test_goal_view.py
tests/comments/: test_comment.py
todolist/: settings.py  urls.py
todolist/bot/: models.py  serializers.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_tg_user_model.py  0002_alter_tguser_verification_code.py  0003_tguser_category_tguser_stage.py
todolist/bot/tg/: client.py
todolist/core/: admin.py  serializers.py  views.py
todolist/core/migrations/: 0001_initial.py
todolist/goals/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py  0002_goal.py  0003_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board.py
