[tool.poetry]
name = "diplomady"
version = "0.1.0"
description = ""
authors = ["DmitriiYaganin <dmitrij.yaganin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.5"

gunicorn = "^20.1.0"



[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

ansible-vault-win = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
